[gd_scene load_steps=10 format=2]

[ext_resource path="res://common/letterbox.gd" type="Script" id=1]
[ext_resource path="res://backgrounds/starfield.tres" type="Material" id=2]
[ext_resource path="res://backgrounds/bg.png" type="Texture" id=3]
[ext_resource path="res://common/gui/ui-theme.tres" type="Theme" id=4]
[ext_resource path="res://common/fonts/big.tres" type="DynamicFont" id=5]
[ext_resource path="res://common/gui/continue.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "end"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("top:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -42 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bottom:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 0, 318 ), Vector2( 0, 360 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("top:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("bottom:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("bg:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 128 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control/Label1:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 4, 4 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Control/Label2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Control/Label1:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 2 ),
"update": 3,
"values": [ Vector2( -1000, 170 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Control/Label2:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 2 ),
"update": 3,
"values": [ Vector2( -800, 200 ) ]
}
tracks/9/type = "method"
tracks/9/path = NodePath(".")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "pause_game"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "loop"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Label1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( -2, 2 ),
"update": 0,
"values": [ Vector2( 10, 170 ), Vector2( -20, 170 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/Label2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( -2, 2 ),
"update": 0,
"values": [ Vector2( 10, 200 ), Vector2( -20, 200 ) ]
}

[sub_resource type="Animation" id=3]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("top:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 3.1 ),
"transitions": PoolRealArray( 0.25, 0.25, 1, 0.25 ),
"update": 0,
"values": [ Vector2( 0, -42 ), Vector2( 0, -42 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bottom:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 3.1 ),
"transitions": PoolRealArray( 0.25, 0.25, 1, 0.25 ),
"update": 0,
"values": [ Vector2( 0, 360 ), Vector2( 0, 360 ), Vector2( 0, 318 ), Vector2( 0, 318 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("top:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("bottom:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("bg:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control/Label1:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.8, 2, 4 ),
"transitions": PoolRealArray( 4, 2, 1, 4 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Control/Label2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.1, 2.4, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Control/Label1:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.8, 2, 4 ),
"transitions": PoolRealArray( 0.25, 0.5, -1.57448, 4 ),
"update": 0,
"values": [ Vector2( 30, 170 ), Vector2( 30, 170 ), Vector2( -20, 170 ), Vector2( 10, 170 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Control/Label2:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1, 2.2, 4 ),
"transitions": PoolRealArray( 0.25, 0.5, -1.51149, 4 ),
"update": 0,
"values": [ Vector2( 30, 200 ), Vector2( 30, 200 ), Vector2( -20, 200 ), Vector2( 10, 200 ) ]
}

[node name="letterbox" type="CanvasLayer"]
pause_mode = 2
layer = 100
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.95 )
material = ExtResource( 2 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 640, 360 )

[node name="top" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.9 )
anchor_right = 1.0
margin_top = -14.4438
margin_bottom = 27.5562
color = Color( 0, 0, 0, 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_bottom = -20.0

[node name="Label1" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0.999228 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1000.0
margin_top = -10.0
margin_right = -978.0
margin_bottom = 9.99998
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0.14902, 0.168627, 0.266667, 1 )
custom_constants/shadow_as_outline = 1
text = "Text goes here"
align = 1

[node name="Label2" type="Label" parent="Control"]
modulate = Color( 1, 1, 1, 0.875 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -800.0
margin_top = 20.0
margin_right = -775.0
margin_bottom = 32.0
theme = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0.14902, 0.168627, 0.266667, 1 )
custom_constants/shadow_as_outline = 1
text = "Sub-text goes here"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bottom" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.9 )
anchor_right = 1.0
margin_top = 332.444
margin_bottom = 374.444
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/end = SubResource( 1 )
anims/loop = SubResource( 2 )
anims/start = SubResource( 3 )

[node name="ContinueButton" parent="." instance=ExtResource( 6 )]
margin_left = -42.0
margin_top = -81.0
margin_right = -10.0
margin_bottom = -49.0
[connection signal="tree_exiting" from="." to="." method="_on_letterbox_tree_exiting"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
